--- a/app/views/admin/canonical_items/new.html.erb
+++ b/app/views/admin/canonical_items/new.html.erb
@@ -8,7 +8,7 @@
       <i class="fa fa-dashboard"></i> Home
     <% end %>
     </li>
-    <li><%= link_to "All Canonical Items", (canonical_items_path) %></li>  
+    <li><%= link_to "All Canonical Items", (admin_canonical_items_path) %></li>
     <li class="active"> New Canonical Item</li>
   </ol>
 </section>
