--- a/app/views/admin/canonical_items/show.html.erb
+++ b/app/views/admin/canonical_items/show.html.erb
@@ -9,7 +9,7 @@
       <i class="fa fa-dashboard"></i> Home
     <% end %>
     </li>
-    <li><%= link_to "Canonical Items", (canonical_items_path) %></li>  
+    <li><%= link_to "Canonical Items", (admin_canonical_items_path) %></li>
     <li class="active"> <%= @canonical_item.name %></li>
   </ol>
 </section>
