--- a/app/views/admin/canonical_items/_form.html.erb
+++ b/app/views/admin/canonical_items/_form.html.erb
@@ -1,7 +1,7 @@
 <% submit_text ||= form.submit_text %>
 
 <div class="box-body">
-  <%= simple_form_for form, html: { class: 'form-horizontal' } do |f| %>
+  <%= simple_form_for form, html: { class: 'form-horizontal' },  url: admin_canonical_item_path do |f| %>
     <%= f.input :name, label: "Name", wrapper: :vertical_input_group do %>
       <span class="input-group-addon"><i class="fa fa-tag"></i></span>
       <%= f.input_field :name, class: "form-control" %>
