--- a/app/views/admin/organizations/edit.html.erb
+++ b/app/views/admin/organizations/edit.html.erb
@@ -9,7 +9,7 @@ Editing
     <i class="fa fa-dashboard"></i> Home
   <% end %>
   </li>
-  <li><%= link_to "Administration", (admins_path(organization_id: current_user.organization)) %></li>
+  <li><%= link_to "Administration", (admin_organizations_path) %></li>
   <li><a href="#">Editing <%= @organization.name %></a></li>
 </ol>
 </section>
@@ -23,7 +23,7 @@ Editing
   <h3 class="box-title">Update record for <%= current_organization.name %></h3>
 </div>
 <div class="box-body">
-<%= simple_form_for @organization, url: admin_path do |f| %>
+<%= simple_form_for @organization, url: admin_organization_path do |f| %>
 
 <div class="form-inputs">
   <%= f.input :name, required: true, autofocus: true %>
