First pass at adding in partner integration.

--- a/app/views/partners/_partner_row.html.erb
+++ b/app/views/partners/_partner_row.html.erb
@@ -1,6 +1,16 @@
+<% status = partner_row.status%>
 <tr>
   <td><%= partner_row.name %></td>
   <td><%= link_to partner_row.email, "mailto:#{partner_row.email}" %></td>
+  <td>  <% case status
+    when "Pending" %>
+      <span class="btn btn-xs bg-maroon"><%= status %></span>
+    <% when "Awaiting Review" %>
+      <%= link_to partner_approve_partner_path(partner_row), class: "btn btn-xs bg-orange" do %><%= status %><% end %>
+    <% when "Approved" %>
+      <span class="btn btn-xs bg-olive"><%= status %></span>
+  <% end %>
+  </td>
   <!-- <td><%== (rand < 0.7) ? '<span class="label label-success">Approved</span>' :
   '<span class="label label-warning">In Progress</span>' %></td> -->
   <td class="text-right"><%= link_to "View", partner_path(partner_row), class: "btn btn-primary btn-xs" %>
