--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -96,6 +96,7 @@
                 <tr>
                   <th>Partner</th>
                   <th>E-mail</th>
+                  <th>Status</th>
                   <!-- <th title="This field is currently mock data">Approved?</th> -->
                   <th>&nbsp;</th>
                 </tr>
