--- a/app/views/partners/new.html.erb
+++ b/app/views/partners/new.html.erb
@@ -26,7 +26,7 @@
 
   <h1 class="medium-offset-3 medium-6"></h1>
   
-  <%= render partial: "form", object: @partner %>
+  <%#= render partial: "form", object: @partner %>
   </div>
 </div>
 <!-- /.box -->
