--- a/app/views/partners/approve_partner.html.erb
+++ b/app/views/partners/approve_partner.html.erb
@@ -26,8 +26,8 @@
 
   <p><%= link_to @partner.email, "mailto:#{@partner.email}" %></p>
   
-  <h1>Application Details</h3>
-  
+  <h1>Partner Application Details</h3>
+  <hr>
   <div class="row">
 
   <div class="col-xs-6">
